--- a/package.json
+++ b/package.json
@@ -1,27 +1,24 @@
 {
-  "name": "clementinejs-fcc",
-  "version": "1.0.1",
-  "description": "The elegant and lightweight boilerplate for full stack JavaScript.",
+  "name": "fcc-timestamp",
+  "version": "1.0.0",
+  "description": "Free Code Camp basejump - timestamp microservice",
   "main": "server.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/johnstonbl01/clementinejs-fcc"
+    "url": "git+https://github.com/hamptonjt/timestamp"
   },
-  "homepage": "http://www.clementinejs.com/",
-  "bugs": "https://github.com/johnstonbl01/clementinejs-fcc/issues",
+  "homepage": "https://github.com/hamptonjt/timestamp",
+  "bugs": "https://github.com/hamptonjt/timestamp/issues",
   "keywords": [
-    "MongoDB",
-    "Mongoose",
     "full stack",
     "Express",
     "Node",
     "javascript",
-    "boilerplate"
   ],
   "scripts": {
   "start": "node server.js"
   },
-  "author": "Blake Johnston",
+  "author": "Jerry Hampton",
   "license": "MIT",
   "dependencies": {
     "dotenv": "^1.2.0",
