Removing comma from 'keywords' array in package.json

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "full stack",
     "Express",
     "Node",
-    "javascript",
+    "javascript"
   ],
   "scripts": {
   "start": "node server.js"
